# open_vins

./: ReadMe.md
config/euroc_mav/: estimator_config.yaml  estimator_config_loop.yaml  estimator_config_no_loop.yaml
config/rpi5_resource_constrained/: estimator_config.yaml
config/uzhfpv_outdoor_45/: estimator_config_loop.yaml
ov_init/src/ceres/: State_JPLQuatLocal.cpp  State_JPLQuatLocal.h
ov_msckf/: package.xml
ov_msckf/cmake/: ROS1.cmake  ROS2.cmake
ov_msckf/launch/: display_loop.rviz  subscribe_loop.launch.py  subscribe_no_loop.launch.py
ov_msckf/src/: run_subscribe_msckf.cpp
ov_msckf/src/core/: VioManager.cpp  VioManager.h  VioManagerHelper.cpp  VioManagerOptions.h
ov_msckf/src/loop/: BowDatabase.cpp  BowDatabase.h  BriefExtractor.cpp  BriefExtractor.h  LoopDetector.cpp  LoopDetector.h  LoopTypes.h
ov_msckf/src/ros/: ROS1Visualizer.cpp  ROS1Visualizer.h  ROS2Visualizer.cpp  ROS2Visualizer.h  ROSVisualizerHelper.h
ov_msckf/src/state/: LoopTypes.h  State.cpp  State.h
ov_msckf/src/test/: CMakeLists.txt  test_bow_database.cpp  test_brief_extractor.cpp  test_loop_detector.cpp  test_updater_loop.cpp
ov_msckf/src/update/: UpdaterLoop.cpp  UpdaterLoop.h
ov_msckf/src/utils/: vocab_converter.cpp
ov_msckf/srv/: SetFilterState.srv
